Fixed buttons on mobile

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -25,7 +25,7 @@
     width: 200px;
     height: 75px;
     font-size: 25px;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
   }
@@ -33,6 +33,9 @@
     background-color: rgba(99,32,238, 0.7);
     color: #F8F0FB;
     text-decoration: none;
+  }
+  .main-button-home-left {
+    display: none;
   }
 }
 
@@ -43,14 +46,35 @@
     align-items: center;
     background-color: rgba(99,32,238, 1);
     color: #F8F0FB;
-    width: 200px;
+    width: 50vw;
     height: 75px;
     font-size: 25px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
   }
   .main-button-home:hover {
+    background-color: rgba(99,32,238, 0.7);
+    color: #F8F0FB;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (max-width: 915px) {
+  .main-button-home-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(99,32,238, 1);
+    color: #F8F0FB;
+    width: 50vw;
+    height: 75px;
+    font-size: 25px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+  .main-button-home-left:hover {
     background-color: rgba(99,32,238, 0.7);
     color: #F8F0FB;
     text-decoration: none;
